; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_jump.c_cleanup_barriers.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_jump.c_cleanup_barriers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cleanup_barriers() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = call i64 (...) @get_insns()
  store i64 %4, i64* %1, align 8
  br label %5

5:                                                ; preds = %36, %0
  %6 = load i64, i64* %1, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %38

8:                                                ; preds = %5
  %9 = load i64, i64* %1, align 8
  %10 = call i64 @NEXT_INSN(i64 %9)
  store i64 %10, i64* %2, align 8
  %11 = load i64, i64* %1, align 8
  %12 = call i64 @BARRIER_P(i64 %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %35

14:                                               ; preds = %8
  %15 = load i64, i64* %1, align 8
  %16 = call i64 @prev_nonnote_insn(i64 %15)
  store i64 %16, i64* %3, align 8
  %17 = load i64, i64* %3, align 8
  %18 = call i64 @BARRIER_P(i64 %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %23

20:                                               ; preds = %14
  %21 = load i64, i64* %1, align 8
  %22 = call i32 @delete_insn(i64 %21)
  br label %34

23:                                               ; preds = %14
  %24 = load i64, i64* %3, align 8
  %25 = load i64, i64* %1, align 8
  %26 = call i64 @PREV_INSN(i64 %25)
  %27 = icmp ne i64 %24, %26
  br i1 %27, label %28, label %33

28:                                               ; preds = %23
  %29 = load i64, i64* %1, align 8
  %30 = load i64, i64* %1, align 8
  %31 = load i64, i64* %3, align 8
  %32 = call i32 @reorder_insns(i64 %29, i64 %30, i64 %31)
  br label %33

33:                                               ; preds = %28, %23
  br label %34

34:                                               ; preds = %33, %20
  br label %35

35:                                               ; preds = %34, %8
  br label %36

36:                                               ; preds = %35
  %37 = load i64, i64* %2, align 8
  store i64 %37, i64* %1, align 8
  br label %5

38:                                               ; preds = %5
  ret i32 0
}

declare dso_local i64 @get_insns(...) #1

declare dso_local i64 @NEXT_INSN(i64) #1

declare dso_local i64 @BARRIER_P(i64) #1

declare dso_local i64 @prev_nonnote_insn(i64) #1

declare dso_local i32 @delete_insn(i64) #1

declare dso_local i64 @PREV_INSN(i64) #1

declare dso_local i32 @reorder_insns(i64, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
